--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "d3-shape": "^3.0.1",
     "i18next": "^21.6.0",
     "lodash": "^4.17.21",
+    "popmotion": "^11.0.3",
+    "randomcolor": "^0.6.2",
     "react": "17.0.2",
     "react-fast-compare": "^3.2.0",
     "react-i18next": "^11.15.1",
@@ -26,7 +29,8 @@
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
