--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@layouts/*": ["src/layouts/*"],
       "@utils/*": ["src/utils/*"],
       "@configs/*": ["src/configs/*"],
+      "@assets/*": ["assets/*"],
       "@themes/*": ["src/themes/*"],
       "@common/*": ["src/common/*"],
       "@navigation/*": ["src/navigation/*"]
