--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-fast-compare": "^3.2.0",
     "react-i18next": "^11.15.1",
     "react-native": "0.66.4",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
