--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "d3-shape": "^3.0.1",
+    "formik": "^2.2.9",
     "i18next": "^21.6.0",
     "lodash": "^4.17.21",
     "popmotion": "^11.0.3",
@@ -31,7 +32,8 @@
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
