--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pod" : "cd ios; pod install; cd .."
   },
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
@@ -15,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^7.1.5",
     "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "d3-shape": "^3.0.1",
@@ -29,6 +31,7 @@
     "react-native": "0.66.4",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
