--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "pod" : "cd ios; pod install; cd .."
+    "pod": "cd ios; pod install; cd ..",
+    "bundle-js-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle"
   },
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
@@ -48,6 +49,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.4.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
     "metro-react-native-babel-preset": "^0.66.2",
