--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "react-native-gesture-handler": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.3.0",
+    "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-shared-element": "^0.8.3",
     "react-native-svg": "^12.1.1",
+    "react-navigation-shared-element": "^3.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
