--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/datetimepicker": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^7.1.5",
@@ -21,6 +22,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "d3-shape": "^3.0.1",
+    "fbjs": "^3.0.2",
     "formik": "^2.2.9",
     "i18next": "^21.6.0",
     "lodash": "^4.17.21",
