--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
     "pod": "cd ios; pod install; cd ..",
     "format": "prettier --write **/*.{ts,tsx,js,json,md}",
+    "check-code": "prettier --check **/*.{ts,tsx,js,json,md}",
+    "apk": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd ..",
+    "aab": "cd android && ./gradlew clean && ./gradlew bundleRelease && cd ..",
+    "lint": "eslint  index.js ./src/**/* --ext .js,.ts,.tsx",
     "bundle-js-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle"
   },
   "dependencies": {
@@ -52,11 +55,14 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.8",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.4.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^8.4.1",
+    "eslint": "^7.14.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^27.4.4",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
