--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.66.4",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-keyboard-manager": "^6.5.4-3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.3.0",
     "react-native-redash": "^16.2.3",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/runtime": "^7.16.3",
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/jest": "^27.0.3",
@@ -71,6 +73,7 @@
     "jest": "^27.4.4",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.3"
   },
   "jest": {
@@ -84,8 +87,7 @@
       "node"
     ],
     "setupFiles": [
-      "./node_modules/react-native-gesture-handler/jestSetup.js",
-      "./jest-setup.js"
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
     ]
   }
 }
