--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.2.9",
     "i18next": "^21.6.0",
     "lodash": "^4.17.21",
+    "moti": "^0.17.1",
     "popmotion": "^11.0.3",
     "randomcolor": "^0.6.2",
     "react": "17.0.2",
@@ -51,6 +52,7 @@
     "react-native-shared-element": "^0.8.3",
     "react-native-svg": "^12.1.1",
     "react-navigation-shared-element": "^3.1.3",
+    "socket.io-client": "^4.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
